--- a/sdmcoletor/webapp/manifest.json
+++ b/sdmcoletor/webapp/manifest.json
@@ -20,8 +20,13 @@
         "uri": "/sap/opu/odata/sap/ZUI_SDM_MOVLPN/",
         "type": "OData",
         "settings": {
-          "annotations": [],
-          "localUri": "localService/metadata.xml",
+          "odataVersion": "2.0"
+        }
+      },
+      "ZSB_SDM_MOVIMENTA_LPN": {
+        "uri": "/sap/opu/odata/sap/ZSB_SDM_MOVIMENTA_LPN/",
+        "type": "OData",
+        "settings": {
           "odataVersion": "2.0"
         }
       }
@@ -41,7 +46,8 @@
       "desktop": true,
       "tablet": true,
       "phone": true
-    }
+    },
+    "fullscreen": true
   },
   "sap.ui5": {
     "flexEnabled": true,
@@ -56,8 +62,6 @@
         "sap.ui.generic.app": {},
         "sap.ui.table": {},
         "sap.ushell": {}
-        
-
       }
     },
     "contentDensities": {
@@ -75,12 +79,18 @@
         "dataSource": "mainService",
         "preload": true,
         "settings": {}
+      },
+      "MovimentaLpn": {
+        "dataSource": "ZSB_SDM_MOVIMENTA_LPN",
+        "preload": true,
+        "settings": {},
+        "type": "sap.ui.model.odata.v2.ODataModel"
       }
     },
     "resources": {
       "css": [
-                {
-            "uri": "css/style.css"
+        {
+          "uri": "css/style.css"
         }
       ]
     },
