--- a/sdmcoletor/package.json
+++ b/sdmcoletor/package.json
@@ -29,7 +29,8 @@
     "unit-tests": "fiori run --config ./ui5-mock.yaml --open 'test/unit/unitTests.qunit.html'",
     "int-tests": "fiori run --config ./ui5-mock.yaml --open 'test/integration/opaTests.qunit.html'",
     "undeploy": "npm run build && fiori undeploy --config ui5-deploy.yaml",
-    "deploy-test": "npm run build && fiori deploy --config ui5-deploy.yaml --testMode true"
+    "deploy-test": "npm run build && fiori deploy --config ui5-deploy.yaml --testMode true",
+    "localdeploy": "npm run build && fiori undeploy --config ui5-deploy.yaml --yes && fiori deploy --config ui5-deploy.yaml --yes"
   },
   "ui5": {
     "dependencies": [
